samples/_failures_safe/1761176671_72498c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6cb607a9.c: In function ‘main’:
./samples/SAFE/__tmp_6cb607a9.c:139:16: error: missing terminating " character
  139 |         printf("Added
      |                ^~~~~~
./samples/SAFE/__tmp_6cb607a9.c:139:9: error: expected expression at end of input
  139 |         printf("Added
      |         ^~~~~~
./samples/SAFE/__tmp_6cb607a9.c:139:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6cb607a9.c:139:9: error: expected declaration or statement at end of input
